# optiimage

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  org.kde.optiimage.appdata.xml  org.kde.optiimage.desktop  org.kde.optiimage.metainfo.xml
.reuse/: dep5
po/ar/: optiimage.po
po/ast/: optiimage.po
po/ca/: optiimage.po
po/ca@valencia/: optiimage.po
po/cs/: optiimage.po
po/de/: optiimage.po
po/en_GB/: optiimage.po
po/eo/: optiimage.po
po/es/: optiimage.po
po/eu/: optiimage.po
po/fi/: optiimage.po
po/fr/: optiimage.po
po/ga/: optiimage.po
po/gl/: optiimage.po
po/he/: optiimage.po
po/hi/: optiimage.po
po/ia/: optiimage.po
po/it/: optiimage.po
po/ja/: optiimage.po
po/ka/: optiimage.po
po/ko/: optiimage.po
po/lt/: optiimage.po
po/lv/: optiimage.po
po/nl/: optiimage.po
po/pl/: optiimage.po
po/pt_BR/: optiimage.po
po/sa/: optiimage.po
po/sk/: optiimage.po
po/sl/: optiimage.po
po/sv/: optiimage.po
po/tr/: optiimage.po
po/ug/: optiimage.po
po/uk/: optiimage.po
po/zh_CN/: optiimage.po
po/zh_TW/: optiimage.po
src/: CMakeLists.txt  Messages.sh  abstractoptijob.cpp  abstractoptijob.h  config.kcfg  consolelog.cpp  consolelog.h  format.cpp  format.h  imagemodel.cpp  imagemodel.h  jpegoptimjob.cpp  jpegoptimjob.h  main.cpp  optimizer.cpp  optimizer.h  optipngjob.cpp  optipngjob.h  resources.qrc  setupcheck.cpp  setupcheck.h
src/contents/ui/: LogOutputPage.qml  Main.qml  OptimizePage.qml  SettingsPage.qml  main.qml
